--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_DATABASE}
+    ports:
+      - 5432:5432
 
 
   adminer:
