--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,10 @@ TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=
+APP_KEY=96wbzgY6iW5db_2en-zMd4rvr7Tlvu7P
 NODE_ENV=development
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=planet_alert
+DB_PASSWORD=planet_alert
+DB_DATABASE=planet_alert
