--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,7 @@
     "@adonisjs/core": "^6.17.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.6.0",
+    "@azure/storage-blob": "^12.26.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@vinejs/vine": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
